refactored StreamEmitter